# flexisol

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
data/raw_energies/: structures.csv
data/references/: dgsolv-references.csv  logkab-references.csv
data/results/: gfn2-full-boltzmann-results.csv  gxtb-full-boltzmann-results.csv  r2scan-3c-full-boltzmann-results.csv  r2scan-3c-full-minimum-results.csv  r2scan-3c-full-random-results.csv  r2scan-3c-gas-boltzmann-results.csv  r2scan-3c-solv-boltzmann-results.csv  wb97mv-def2tzvppd-full-boltzmann-results.csv
flexisol/gas/benzene/diethylcarbonate_chrg0_t0_c0/: coord.xyz
flexisol/gas/benzene/diethylcarbonate_chrg0_t0_c2/: coord.xyz
flexisol/gas/benzene/diethylcarbonate_chrg0_t0_c6/: coord.xyz
flexisol/gas/chloroform/1,3,5-trinitrobenzene_chrg0_t0_c0/: coord.xyz
flexisol/gas/chloroform/hexahydro-1,3,5-trinitro-1,3,5-triazacyclohexane_chrg0_t0_c0/: coord.xyz
flexisol/gas/chloroform/hexahydro-1,3,5-trinitro-1,3,5-triazacyclohexane_chrg0_t0_c2/: coord.xyz
flexisol/gas/chloroform/hexahydro-1,3,5-trinitroso-1,3,5-triazine_chrg0_t0_c0/: coord.xyz
flexisol/gas/chloroform/hexahydro-1,3,5-trinitroso-1,3,5-triazine_chrg0_t0_c3/: coord.xyz
flexisol/gas/chloroform/hexahydro-1,3,5-trinitroso-1,3,5-triazine_chrg0_t0_c6/: coord.xyz
flexisol/gas/chloroform/hexahydro-1-nitroso-3,5-dinitro-1,3,5-triazine_chrg0_t0_c2/: coord.xyz
flexisol_cli/: __init__.py  cli.py  config.py  evaluation.py  metrics.py  reader.py  registry.json
flexisol_eval/: __init__.py  cli.py  config.py  reader.py  registry.json
(+22227 files in other folders)
