[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexisol-cli"
version = "0.1.0"
description = "Lightweight, no-compute evaluator for FlexiSol benchmarks"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
  { name = "L. Wittmann" },
  { name = "C. E. Selzer" }
]
dependencies = [
  "numpy",
  "pandas",
]

[project.scripts]
flexisol = "flexisol_cli.cli:main"
flexisol-cli = "flexisol_cli.cli:main"

[tool.setuptools]
packages = ["flexisol_cli"]

[tool.setuptools.package-data]
flexisol_cli = ["registry.json"]
